[metadata]
name = mediafiredl
version = 0.0.2
author = Santiago Ariel Mansilla
author_email = santiago_ariel_mansilla@hotmail.com
description = MediafireDL is an automation tool to download files from mediafire without having to do any extra steps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gann4/mediafiredl
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = False
install_requires = 
    bs4
    requests